# ECE-1508-Project

./: .gitattributes  .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: default.yaml  quick.yaml
doc/: architecture.md  data_pipeline.md  models.md
notebooks/: demo.ipynb
report/: RF-GenLab_Report.docx
results/: anomaly_metrics.json  generation_metrics.json  summary.md
runs/classifier/: history.json
runs/diffusion/: history.json
runs/flow/: history.json
runs/mamba/: history.json
runs/vae/: history.json
scripts/: demo.py  run_all.py
slides/: RF-GenLab_Presentation.pptx
src/rfgen/: __init__.py  utils.py
src/rfgen/data/: __init__.py  build_dataset.py  dataset.py
src/rfgen/dsp/: __init__.py  generators.py  impairments.py  quantize.py  spectrogram.py
src/rfgen/eval/: anomaly.py  common.py  figures.py  generation.py  summarize.py
src/rfgen/models/: __init__.py  classifier.py  cvae.py  diffusion.py  flow.py  mamba_ar.py
src/rfgen/train/: common.py  train_classifier.py  train_diffusion.py  train_flow.py  train_mamba.py  train_vae.py
tests/: test_dsp.py  test_models.py
