[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "rf-genlab"
version = "1.0.0"
description = "Deep generative models for synthetic RF signal generation and anomaly detection (ECE 1508 project)."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Tristan Ruel" }]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "torch>=2.1",
    "h5py>=3.8",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"rfgen" = ["py.typed"]
